# proxy_checker

./: Cargo.toml
src/: gui.rs  main.rs
src/gui/: scanner.rs
