[package]
name = "proxy_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
tinyfiledialogs = "3.0"
egui_extras = "0.20.0"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3"
itertools = "0.10.5"